# Text2Video

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  json2video_make_video.py  main.py  pyproject.toml  requirements.txt  streamlit.app.py
app/: __init__.py
app/core/: bootstrap.py  config.py  illustration.py  interfaces.py  merge.py  pipeline.py  provider_factory.py  script_generate.py  script_preprocess.py  speech_batch.py
app/core/json2video/: __init__.py  assembler.py  audio_probe.py  caption.py  clip.py  config.py  text_utils.py
app/core/utils/: text.py
app/core/video/: __init__.py  assembler.py  audio_probe.py  caption_panel.py  clip_builder.py
app/providers/: __init__.py  image_siliconflow.py  llm_siliconflow.py  tts_aliyun.py  tts_guiji.py
app/providers/openai_limiter/: common_components.py  openai_embedding_limiter.py  openai_embedding_with_cache.py  openai_llm_limiter.py  openai_llm_with_cache.py
app/routers/: __init__.py  video_from_markdown.py  video_from_topic.py
docker/: entrypoint.sh
tests/: batch_script_to_speech.py  generate_illustration_prompts.py  get_audio_time.py  json2video.py  md2script.py  merge_speech_and_images_to_video.py  merged_speech_and_images.json  prepare_illustration_assets_for_video.py  prepare_script_for_recording.py  split_text_for_tts.py  test_api_routes.py  text2image.py  text2speech.py  tts_guiji.py
